--- a/app/src/main/res/layout/movie_row.xml
+++ b/app/src/main/res/layout/movie_row.xml
@@ -16,7 +16,7 @@
 
 
             <ImageView
-                android:id="@+id/item_holder_img"
+                android:id="@+id/img_itemHolder"
                 android:layout_width="150dp"
                 android:layout_height="120dp"
                 android:layout_marginStart="6dp"
