--- a/app/src/main/res/layout/fragment_movie_detail_screen.xml
+++ b/app/src/main/res/layout/fragment_movie_detail_screen.xml
@@ -8,19 +8,18 @@
 
     <ImageView
         android:id="@+id/movie_image"
-        android:layout_width="350dp"
-        android:layout_height="300dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="300dp"
+        android:layout_height="200dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/back_arrow"
         tools:srcCompat="@mipmap/img" />
 
     <TextView
         android:id="@+id/movie_name_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="13dp"
         android:fontFamily="sans-serif-black"
         android:text="@string/movie_name"
         android:textSize="30sp"
@@ -33,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="sans-serif"
         android:text="@string/some_kind_of_information"
@@ -45,11 +44,20 @@
 
     <ImageView
         android:id="@+id/back_arrow"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="30dp"
+        android:layout_marginTop="10dp"
         android:src="@drawable/ic_arrow_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/similar_movie_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/overview_txt" />
 </androidx.constraintlayout.widget.ConstraintLayout>
