--- a/app/src/main/res/layout/fragment_movie_detail_screen.xml
+++ b/app/src/main/res/layout/fragment_movie_detail_screen.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/movie_image"
         android:layout_width="300dp"
-        android:layout_height="200dp"
+        android:layout_height="190dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/back_arrow"
@@ -35,6 +35,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="sans-serif"
+        android:maxLines="8"
         android:text="@string/some_kind_of_information"
         android:textSize="16sp"
         android:textStyle="bold"
@@ -56,8 +57,8 @@
         android:id="@+id/similar_movie_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/overview_txt" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
