--- a/app/src/main/res/layout/fragment_movie_detail_screen.xml
+++ b/app/src/main/res/layout/fragment_movie_detail_screen.xml
@@ -39,6 +39,7 @@
         android:text="@string/some_kind_of_information"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/similar_movie_recycler"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/movie_name_txt" />
